--- a/index.html
+++ b/index.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Responsive Navbar</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
-
-<header>
-    <p class = "logo">Navbar </p>
-    <input type="checkbox" name = “” class="btn"/>
-    <div class="nav">
-        <ol>
-            <li><a href="http://">HOME</a></li>
-            <li><a href="http://">HOME</a></li>
-            <li><a href="http://">HOME</a></li>
-            <li><a href="http://">HOME</a></li>
-        </ol>
-      
-
-    </div>
-
-   
-</header>
-
-    
+	<body>
+	
+	<nav>
+	<a href="#">LOGO</a> 
+		<label for="toggler">
+			<i class="fa fa-bars"></i>
+		</label>
+	<input type="checkbox" id="toggler" name="">
+		<div class="menu">
+			<ul class="list">
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Services</a></li>
+				<li><a href="#">Contact</a></li>
+				<li><a href="#">About Us</a></li>
+				<li><a href="#">Login</a></li>
+			</ul>
+		</div>
+	</nav>
 </body>
 </html>
